--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
    <footer>
 
         <h1>contactanos</h1>
-        <p>Milton el mamado <br>
-        mynor larios el insano <br>
-    carmen bá bien</p>
+        <p>Milton saban <br>
+        mynor larios  <br>
+    carmen bá </p>
 
     <br><br><br>
    </footer>
